--- a/example/detailed_example.ipynb
+++ b/example/detailed_example.ipynb
@@ -2362,11 +2362,11 @@
     "\n",
     "See help on `sfmodel_boot_marginal()` for other options.\n",
     "\n",
-    "In this example, the function has two returns. The first one, which we saved in `err_ci`, is a $3\\times 2$ matrix with the bootstrapped standard errors in the first column and the confidence intervals (tuples) in the 2nd column. The second return, which we saved in `bsdata`, is a $250 \\times 3$ matrix of bootstrapped data. More specifically, the first column is the bootstrapped mean marginal effect of `age` collected from each of the 250 replications. The second and the third columns are the data for `school` and `yr`, respectively.\n",
+    "In this example, the function has two returns. The first one, which we saved in `err_ci`, is a $3\\times 2$ matrix with the bootstrapped standard errors in the first column and the confidence intervals (tuples) in the 2nd column. The second return, which we saved in `bsdata`, is a $100 \\times 3$ matrix of bootstrapped data. More specifically, the first column is the bootstrapped mean marginal effect of `age` collected from each of the 100 replications. The second and the third columns are the data for `school` and `yr`, respectively.\n",
     "\n",
     "If `getBootData=false` (the default), there would be only one return (the first one) from `sfmodel_boot_marginal()`.\n",
     "\n",
-    "The saved `bsdata` data could be used for later analysis. For instance, to obtain confidence intervals at different significance levels, we could re-run `sfmodel_boot_margina()` again with a different value of `level`, but this is time consuming and absolutely unnecessary since the bootstrapped data is the same regardless of the significance levels. Instead, we may run `sfmodel_boot_marginal()` once and obtain bootstrapped data, and then apply it to `sfmodel_CI()` to get confidence intervals at different significance levels.\n",
+    "The saved `bsdata` data could be used for later analysis. For instance, to obtain confidence intervals at different significance levels, we could re-run `sfmodel_boot_margina()` with different values of `level`, but this is time consuming and absolutely unnecessary since the bootstrapped data is the same regardless of the significance levels. Instead, we may run `sfmodel_boot_marginal()` once and obtain bootstrapped data, and then apply it to `sfmodel_CI()` to get confidence intervals at different significance levels.\n",
     "\n",
     "Here we use `bsdata` in `sfmodel_CI()` to get the 90% bias-corrected confidence intervals (i.e., at the 10% significance level)."
    ]
