--- a/example/detailed_example.ipynb
+++ b/example/detailed_example.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd(\"e:/ajen/myJulia/devtest\");   # dataset location; note: \"/\" instead of \"\\\""
+    "cd(\"c:/your/dataset/folder/\");   # your dataset location; note: \"/\" instead of \"\\\""
    ]
   },
   {
@@ -119,7 +119,7 @@
     "using SFrontiers        # main packages\n",
     "using DataFrames, CSV   # handling data\n",
     "\n",
-    "df = CSV.read(\"sampledata.csv\", DataFrame; header=1, delim=\",\")\n",
+    "df = DataFrame(CSV.File(\"sampledata.csv\")) \n",
     "df[!, :_cons] .= 1.0;         # append column _cons as a column of 1 "
    ]
   },
